--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -101,15 +101,15 @@ Macro Multi Export
 <li>Click "Export" to create the files.</li></ol>
 <figure class="mw-halign-center" typeof="mw:File"><a href="index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260106014550&amp;.html" class="mw-file-description"><img src="File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="568" class="mw-file-element" data-file-width="1002" data-file-height="1424"></a><figcaption></figcaption></figure>
 <h2><span class="mw-headline" id="Requirements">Requirements</span></h2>
-<ul><li>FreeCAD 0.21 or later</li>
-<li>Objects with solid shapes (Part or PartDesign bodies)</li></ul>
+<ul><li>FreeCAD 0.21 or later.</li>
+<li>Objects with solid shapes (Part or PartDesign bodies).</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro</a></li>
+<ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a>.</li>
 <li>Copy the file to your FreeCAD macro directory:
 <ul><li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Macro/</span></li>
 <li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Macro/</span></li>
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Macro/</span></li></ul></li>
-<li>Optionally, download the toolbar icon and place it in the same directory</li></ol>
+<li>Optionally, download the toolbar icon and place it in the same directory.</li></ol>
 <h2><span class="mw-headline" id="Source_Code">Source Code</span></h2>
 <p>The full source code is hosted on GitHub:
 </p>
@@ -129,19 +129,19 @@ Macro Multi Export
 <p><br>
 </p>
 <h2><span class="mw-headline" id="Links">Links</span></h2>
-<ul><li><a href="Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function</li>
-<li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats</li></ul>
+<ul><li><a href="Std_Export.html" title="Std Export">Std Export</a> - FreeCAD's built-in export function.</li>
+<li><a href="Import_Export.html" title="Import Export">Import Export</a> - Overview of FreeCAD import/export formats.</li></ul>
 <p><br>
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260112185722
+Cached time: 20260112191037
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.027 seconds
-Real time usage: 0.048 seconds
-Preprocessor visited node count: 143/1000000
+CPU time usage: 0.021 seconds
+Real time usage: 0.023 seconds
+Preprocessor visited node count: 126/1000000
 Post&#8208;expand include size: 3192/2097152 bytes
 Template argument size: 1112/2097152 bytes
 Highest expansion depth: 5/100
@@ -151,13 +151,13 @@ Unstrip post&#8208;expand size: 0/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.369      1 -total
- 44.85%    3.305      1 Template:Macro
- 26.02%    1.917      3 Template:FileName
- 23.80%    1.754      1 Template:CodeDownload
+100.00%    3.890      1 -total
+ 49.28%    1.917      1 Template:Macro
+ 23.11%    0.899      3 Template:FileName
+ 21.57%    0.839      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260112185722 and revision id 1737628. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260112191054 and revision id 1737630. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
