--- a/wiki/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/Macro_Cut_Object_For_Magnets.html
@@ -1,5 +1,5 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Cut Object For Magnets</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><br>
-</p>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Cut Object For Magnets</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+Cut+Object+For+Magnets&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -213,29 +213,29 @@ Macro Cut Object for Magnets
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260112190840
+Cached time: 20260112191122
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.024 seconds
-Real time usage: 0.025 seconds
-Preprocessor visited node count: 139/1000000
+CPU time usage: 0.073 seconds
+Real time usage: 0.089 seconds
+Preprocessor visited node count: 168/1000000
 Post&#8208;expand include size: 3367/2097152 bytes
 Template argument size: 1267/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 0/5000000 bytes
+Unstrip post&#8208;expand size: 530/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.423      1 -total
- 49.55%    1.696      1 Template:Macro
- 22.21%    0.760      3 Template:FileName
- 21.41%    0.733      1 Template:CodeDownload
+100.00%    4.719      1 -total
+ 49.18%    2.321      1 Template:Macro
+ 24.11%    1.138      3 Template:FileName
+ 21.40%    1.010      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260112190913 and revision id 1737629. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409406-0!canonical and timestamp 20260112191122 and revision id 1737631. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
