--- a/wiki/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/Robust_MCP_Bridge_Workbench.html
@@ -1,5 +1,5 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Robust MCP Bridge Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><p><br>
-</p>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Robust MCP Bridge Workbench</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Robust+MCP+Bridge+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li></ul></div>
 <figure typeof="mw:File/Thumb"><a href="index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Robust MCP Bridge Workbench icon</figcaption></figure>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
@@ -159,32 +159,32 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - The protocol specification.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260112191949
+Cached time: 20260112192117
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.042 seconds
-Preprocessor visited node count: 207/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.045 seconds
+Preprocessor visited node count: 253/1000000
 Post&#8208;expand include size: 2233/2097152 bytes
 Template argument size: 742/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2401/5000000 bytes
+Unstrip post&#8208;expand size: 2930/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.870      1 -total
- 21.23%    2.520      4 Template:Code
- 16.01%    1.900      4 Template:MenuCommand
- 15.17%    1.801      1 Template:TOCright
- 15.00%    1.781      3 Template:FileName
- 11.35%    1.347      3 Template:Button
- 10.47%    1.243      5 Template:Incode
+100.00%   10.261      1 -total
+ 23.93%    2.455      4 Template:Code
+ 17.69%    1.816      5 Template:Incode
+ 15.58%    1.599      1 Template:TOCright
+ 11.98%    1.229      4 Template:MenuCommand
+ 10.34%    1.061      3 Template:FileName
+ 10.22%    1.049      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260112191953 and revision id 1737695. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410040-0!canonical and timestamp 20260112192117 and revision id 1737696. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
