--- a/wiki/fr/Basic_Sketcher_Tutorial.html
+++ b/wiki/fr/Basic_Sketcher_Tutorial.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Basic Sketcher Tutorial/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Basic+Sketcher+Tutorial&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Grundlegendes Tutorial zum Sketcher (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Grundlegendes Tutorial zum Sketcher (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Basic_Sketcher_Tutorial.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Basic Sketcher Tutorial (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Tutorial B&aacute;sico Croquizador (70% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
-<li><a href="../it/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Tutorial base di Sketcher (99% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--high" title="Poradnik: Podstawy dla &#347;rodowiska pracy Szkicownik (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><a href="../it/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Tutorial base di Sketcher (100% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../pl/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--complete" title="Poradnik: Podstawy dla &#347;rodowiska pracy Szkicownik (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial do esbo&ccedil;o (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial B&aacute;sico de Sketcher (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Basic_Sketcher_Tutorial.html" class="mw-pt-progress mw-pt-progress--low" title="Tutorial Sketcher (3% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -178,12 +178,8 @@
 <dl><dd>7.6. S&eacute;lectionnez la ligne de construction la plus proche de l'axe vertical.</dd>
 <dd>7.7. Appuyez sur <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Constraint_Vertical.svg&amp;filetimestamp=20231231200018&amp;.html" class="mw-file-description"><img src="../File/Constraint_Vertical.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">&lrm;Sketcher Cr&eacute;er une contrainte verticale...</a></span> (facultatif). Si vous avez trac&eacute; la ligne de construction vers le bas sur l'axe Y, un <span typeof="mw:File"><a href="../index.php?title=Constraint_PointOnObject.svg&amp;filetimestamp=20231231195734&amp;.html" class="mw-file-description"><img src="../File/Constraint_PointOnObject.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Sketcher_ConstrainPointOnObject.html" title="Sketcher ConstrainPointOnObject/fr">Sketcher Fixer un point sur un objet</a>  automatique a d&eacute;j&agrave; &eacute;t&eacute; plac&eacute;, en maintenant la ligne de construction verticale. Dans ce cas, aucun <span typeof="mw:File"><a href="../index.php?title=Constraint_Vertical.svg&amp;filetimestamp=20231231200018&amp;.html" class="mw-file-description"><img src="../File/Constraint_Vertical.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical/fr">&lrm;Sketcher contrainte verticale</a> suppl&eacute;mentaire n'est n&eacute;cessaire.</dd></dl>
 <p><i>Remarque 1:</i> lorsque vous ajoutez des contraintes, des symboles de superposition indiquant le type de contrainte apparaissent sur la g&eacute;om&eacute;trie ans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a>. Si ces symboles obscurcissent votre vue, vous pouvez les masquer en d&eacute;cochant la contrainte dans le <a href="../fr/Task_Panel.html" title="Task Panel/fr">Panneau des t&acirc;ches</a>. Notez &eacute;galement que le nombre de degr&eacute;s de libert&eacute; diminue apr&egrave;s l'ajout de chaque contrainte.
-</p>
-<div class="mw-translate-fuzzy">
-<p><i>Remarque 2:</i> si vous souhaitez d&eacute;sactiver temporairement la contrainte, vous pouvez la s&eacute;lectionner et appuyer sur <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleActiveConstraint.svg&amp;filetimestamp=20231231200133&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleActiveConstraint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint/fr">Sketcher Activer/d&eacute;sactiver la contrainte</a></span>. Lorsque vous souhaitez l'appliquer &agrave; nouveau, appuyez &agrave; nouveau sur le m&ecirc;me bouton.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05a_Sk01_Sketcher_equality_constraints_lines.png&amp;filetimestamp=20200223072040&amp;.html" class="mw-file-description"><img src="../File/05a_Sk01_Sketcher_equality_constraints_lines.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span> <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05b_Sk01_Sketcher_equality_constraints_O-arcs.png&amp;filetimestamp=20200223072123&amp;.html" class="mw-file-description"><img src="../File/05b_Sk01_Sketcher_equality_constraints_O-arcs.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span>
+</p><p><i>Remarque 2:</i> si vous souhaitez d&eacute;sactiver temporairement la contrainte, vous pouvez la s&eacute;lectionner et appuyer sur <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleActiveConstraint.svg&amp;filetimestamp=20231231200133&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleActiveConstraint.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/Sketcher_ToggleActiveConstraint.html" title="Sketcher ToggleActiveConstraint/fr">Sketcher Activer/d&eacute;sactiver la contrainte</a></span>. Pour le r&eacute;activer, appuyez &agrave; nouveau sur le m&ecirc;me bouton.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05a_Sk01_Sketcher_equality_constraints_lines.png&amp;filetimestamp=20200223072040&amp;.html" class="mw-file-description"><img src="../File/05a_Sk01_Sketcher_equality_constraints_lines.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span> <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05b_Sk01_Sketcher_equality_constraints_O-arcs.png&amp;filetimestamp=20200223072123&amp;.html" class="mw-file-description"><img src="../File/05b_Sk01_Sketcher_equality_constraints_O-arcs.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span>
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=05c_Sk01_Sketcher_equality_constraints_I-arcs.png&amp;filetimestamp=20200223072159&amp;.html" class="mw-file-description"><img src="../File/05c_Sk01_Sketcher_equality_constraints_I-arcs.png" decoding="async" width="410" height="400" class="mw-file-element" data-file-width="482" data-file-height="470"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Esquisse avec des contraintes d'&eacute;galit&eacute; appliqu&eacute;es aux lignes de construction et aux deux ensembles d'arcs.</p>
@@ -297,35 +293,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210932
+Cached time: 20260112213459
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.174 seconds
-Real time usage: 0.549 seconds
-Preprocessor visited node count: 913/1000000
+CPU time usage: 0.165 seconds
+Real time usage: 0.288 seconds
+Preprocessor visited node count: 912/1000000
 Post&#8208;expand include size: 44136/2097152 bytes
 Template argument size: 12371/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2557/5000000 bytes
+Unstrip post&#8208;expand size: 2576/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   82.271      1 -total
- 18.11%   14.902      9 Template:Value
- 17.39%   14.304      1 Template:Sketcher_Tools_navi/fr
- 15.91%   13.089     28 Template:Button
- 11.43%    9.400      2 Template:Navigation_menu_2
-  9.67%    7.955      5 Template:KEY
-  7.55%    6.215      1 Template:Userdocnavi/fr
-  5.49%    4.519     11 Template:Caption
-  5.40%    4.443      9 Template:MenuCommand
-  5.29%    4.353      1 Template:TutorialInfo/fr
+100.00%   40.220      1 -total
+ 20.84%    8.383      1 Template:Sketcher_Tools_navi/fr
+ 14.39%    5.786     11 Template:Caption
+ 12.14%    4.883      2 Template:Navigation_menu_2
+ 10.25%    4.122      9 Template:Value
+ 10.03%    4.035      1 Template:TutorialInfo/fr
+  8.64%    3.473     28 Template:Button
+  8.61%    3.464      1 Template:Userdocnavi/fr
+  5.54%    2.228      9 Template:Incode
+  5.49%    2.206      5 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:65820-0!canonical and timestamp 20260111210932 and revision id 1736370. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:65820-0!canonical and timestamp 20260112213458 and revision id 1737741. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
